# adt-framework

./: .gitattributes  .gitignore  LICENSE  README.md  bootstrap.sh  console.sh  install.sh  notes.md  setup.py  start.sh  todo.md
.claude/: settings.local.json
.claude/commands/: hive-architect.md  hive-backend.md  hive-devops.md  hive-frontend.md  hive-overseer.md  hive.md
.claude/hooks/: adt-enforce.sh
.gemini/: settings.json
.github/workflows/: ci.yml  (+1 more)
_cortex/: AI_PROTOCOL.md  MASTER_PLAN.md  heal_ads.py  phases.json  requests.md  tasks.json
adt-console/src-tauri/: Cargo.toml  tauri.conf.json
adt-console/src-tauri/capabilities/: default.json
adt-console/src-tauri/src/: ipc.rs  lib.rs  main.rs  pty.rs  shortcuts.rs  tray.rs  watcher.rs
adt_center/: __init__.py  app.py
adt_core/: __init__.py  cli.py  patch_gateway.py  registry.py  test_dttp_hook.txt  test_normalization.txt  test_resolve.py  test_sync.txt
adt_sdk/: client.py  decorators.py
config/: dttp.json  jurisdictions.json  specs.json
docs/: Capability Change Event Capture.html  Capability Evolution Event Capture2.mhtml  MANUAL.md
scripts/: setup_shatterglass.sh
tests/: dummy.txt  test_capability_traceability.py  test_delegations_logic.py  test_dttp.py  test_dttp_service.py  test_git_governance.py  test_governance_parser.py  test_json_merge_complex.py  test_multi_project.py  test_parse.py  test_robustness.py  test_sandbox_phase_a.py  test_scr_system.py  test_sdd.py  test_shatterglass.py  test_shatterglass_enforcement.py  test_spec_037.py  test_spec_038_linking.py  test_task_governance.py
(+202 files in other folders)
